--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -40,7 +40,7 @@
 # If run as a non-root user, this setting has no effect.
 # Note that on Windows this has no effect and so mosquitto should 
 # be started by the user you wish it to run as.
-#user mosquitto
+user root
 
 # The maximum number of QoS 1 and 2 messages currently inflight per 
 # client.
